--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.vk:androidsdk:1.6.5'
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
     testCompile 'junit:junit:4.12'
 }
